--- a/index.html
+++ b/index.html
@@ -167,5 +167,17 @@
   </div>
 
 </div>
+  <script>
+  document.querySelector('.search-bar input').addEventListener('keydown', function(event) {
+    if (event.key === 'Enter') {
+      const query = event.target.value.trim();
+      if (query !== '') {
+        const searchUrl = `https://www.pornhub.com/video/search?search=${encodeURIComponent(query)}`;
+        window.location.href = searchUrl;
+      }
+    }
+  });
+</script>
+
 </body>
 </html>
